Update Id of package

--- a/S2Geometry.Nuget/Package.nuspec
+++ b/S2Geometry.Nuget/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>S2Geometry.NetCore</id>
     <version>1.0.1</version>
-    <title>S2Geometry.Nuget</title>
+    <title>S2Geometry.NetCore</title>
     <authors>cormaltes</authors>
     <description>
       S2Geometry
