--- a/S2Geometry.NetCore/project.json
+++ b/S2Geometry.NetCore/project.json
@@ -1,5 +1,6 @@
 {
-  "version": "1.0.0-*",
+  "title": "S2Geometry.NetCore",
+  "version": "1.0.1-*",
 
   "dependencies": {
     "NETStandard.Library": "1.6.0"
