--- a/S2Geometry.Nuget/S2Geometry.Nuget.csproj
+++ b/S2Geometry.Nuget/S2Geometry.Nuget.csproj
@@ -86,4 +86,7 @@
     <Message Text="SUCCESS: Created package." Condition=" '$(Configuration)|$(Platform)|$(ExitCode)' == 'Debug|AnyCPU|0' " Importance="High" />
     <Message Text="SUCCESS: Published package." Condition=" '$(Configuration)|$(Platform)|$(ExitCode)' == 'Release|AnyCPU|0' " Importance="High" />
   </Target>
+  <PropertyGroup>
+    <PreBuildEvent>if $(ConfigurationName) == Release xcopy /Y $(SolutionDir)S2Geometry.NetCore\bin\Release\netstandard1.5\*.* $(ProjectDir)\lib\dnxcore50\</PreBuildEvent>
+  </PropertyGroup>
 </Project>
